# ozr

./: .cursorrules  .dockerignore  .env.example  .env.stack.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION_SPEC.md  LICENSE  README.md  SECURITY.md  docker-compose.full.yml  docker-compose.stack.yml  docker-compose.yml  ozr.md
.github/: RELEASE_v0.1.0-alpha.1.md  RELEASE_v0.1.0-alpha.2.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration.yml  release-check.yml
docker/: entrypoint.sh  sandboxd.stack.env
docs/: architecture.md  sandboxd-local.md  sandboxd-production.md
scripts/: audit-secrets.sh  bootstrap-sandboxd-vendor.sh  create-github-release.sh  docker-up-full.sh  docker-up-infra.sh  docker-up-stack.sh  run-integration.sh  test-sandboxd-shell-api.sh  validate-stack-compose.sh  wire-sandboxd.sh
scripts/lib/: stack-env.sh
src/: cli.rs  lib.rs  main.rs  test_support.rs
src/api/: approval_gate.rs  handlers.rs  mod.rs  openai_shim.rs  state.rs
src/core/: agent_loop.rs  approval.rs  approval_insights.rs  approval_report.rs  audit.rs  budget.rs  config.rs  embedding.rs  guardrail.rs  http_client.rs  integration_fixtures.rs  json_util.rs  llm_adapter.rs  llm_schema.rs  mcp_client.rs  mcp_protocol.rs  mcp_tool_catalog.rs  memory.rs  memory_orchestrator.rs  memory_sqlite.rs  mod.rs  policy.rs  policy_pack.rs  replay.rs  (+7 more)
tests/: api.rs  integration_live.rs  mcp_filesystem.rs  mcp_stdio.rs  sandboxd_api.rs  smoke_scenarios.rs
ui/: README.md  package-lock.json  package.json
(+15 files in other folders)
