[package]
name = "ozr"
version = "0.1.0"
authors = ["Kenjiro Sarjonator <sarjonator@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Security-first async agent harness for MCP with approval gates and sandbox execution"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "sync", "net"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
